# BitNode-Console

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  book.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/instructions/: markdown.instructions.md
.github/prompts/: rust-docs.md  unit-tests.md
.github/workflows/: build-deploy-documentation.yaml
crates/lib_server/: Cargo.toml
crates/lib_server/assets/: index.html
crates/lib_server/src/: lib.rs  main.rs
crates/web/: Cargo.toml  Makefile.toml
crates/web/src/: main.rs
docs/: SUMMARY.md  product-requirements.md
frontend/: package-lock.json  vite.config.ts
