[package]
name = "lib_server"
description.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8.6" }
mime_guess = "2.0.5"
rust-embed = { version = "8.9.0", features = ["interpolate-folder-path"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }

[lints]
workspace = true
